--- a/src/views/14-page.html
+++ b/src/views/14-page.html
@@ -55,12 +55,12 @@
                         <div class="catalog__main">
                             <section class="service">
                                 <div class="service__grid">
-                                    <div class="service__column service__column--4">
+                                    <div class="service__column service__column--editable service__column--4">
                                         <div class="grid__block mobile-order mobile-order--9">
                                             @@include("../blocks/modules/product/product-image.html")
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--6">
+                                    <div class="service__column service__column--editable service__column--6">
                                         <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
