--- a/src/views/34-page.html
+++ b/src/views/34-page.html
@@ -93,6 +93,13 @@
                                                 </div>
                                             </div>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--checkbox">
                                                     <label class="lk-checkbox">
                                                         <input type="checkbox" name="question" class="lk-checkbox__input">
@@ -152,6 +159,13 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--checkbox">
                                                     <label class="lk-checkbox">
                                                         <input type="checkbox" name="question" class="lk-checkbox__input">
@@ -163,7 +177,7 @@
                                                     </label>
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--number">
-                                                    2
+                                                    1
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--thumb">
                                                     <div class="lk-item__thumb">
@@ -173,7 +187,7 @@
                                                 <div class="lk-item__col lk-item__col--content">
                                                     <p class="lk-item__text">
                                                         <a href="" target="_blank">
-                                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                            140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                         </a>
                                                     </p>
                                                     <p class="lk-item__text">
@@ -186,13 +200,13 @@
                                                 <div class="lk-item__col lk-item__col--count">
                                                     <p class="lk-item__count">
                                                         <span>
-                                                            2 шт.
+                                                            22 шт.
                                                         </span>
                                                         <span>
                                                             х
                                                         </span>
                                                         <span>
-                                                            <b>12 660</b> руб.
+                                                            <b>211 660</b> руб.
                                                         </span>
                                                     </p>
                                                 </div>
@@ -211,6 +225,13 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--checkbox">
                                                     <label class="lk-checkbox">
                                                         <input type="checkbox" name="question" class="lk-checkbox__input">
@@ -222,7 +243,7 @@
                                                     </label>
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--number">
-                                                    3
+                                                    1
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--thumb">
                                                     <div class="lk-item__thumb">
@@ -232,7 +253,7 @@
                                                 <div class="lk-item__col lk-item__col--content">
                                                     <p class="lk-item__text">
                                                         <a href="" target="_blank">
-                                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                            140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                         </a>
                                                     </p>
                                                     <p class="lk-item__text">
@@ -245,13 +266,13 @@
                                                 <div class="lk-item__col lk-item__col--count">
                                                     <p class="lk-item__count">
                                                         <span>
-                                                            2 шт.
+                                                            22 шт.
                                                         </span>
                                                         <span>
                                                             х
                                                         </span>
                                                         <span>
-                                                            <b>12 660</b> руб.
+                                                            <b>211 660</b> руб.
                                                         </span>
                                                     </p>
                                                 </div>
@@ -345,6 +366,13 @@
                                                 </div>
                                             </div>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--checkbox">
                                                     <label class="lk-checkbox">
                                                         <input type="checkbox" name="question" class="lk-checkbox__input">
@@ -404,6 +432,13 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--checkbox">
                                                     <label class="lk-checkbox">
                                                         <input type="checkbox" name="question" class="lk-checkbox__input">
@@ -415,7 +450,7 @@
                                                     </label>
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--number">
-                                                    2
+                                                    1
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--thumb">
                                                     <div class="lk-item__thumb">
@@ -425,7 +460,7 @@
                                                 <div class="lk-item__col lk-item__col--content">
                                                     <p class="lk-item__text">
                                                         <a href="" target="_blank">
-                                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                            140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                         </a>
                                                     </p>
                                                     <p class="lk-item__text">
@@ -438,13 +473,13 @@
                                                 <div class="lk-item__col lk-item__col--count">
                                                     <p class="lk-item__count">
                                                         <span>
-                                                            2 шт.
+                                                            22 шт.
                                                         </span>
                                                         <span>
                                                             х
                                                         </span>
                                                         <span>
-                                                            <b>12 660</b> руб.
+                                                            <b>211 660</b> руб.
                                                         </span>
                                                     </p>
                                                 </div>
@@ -463,6 +498,13 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--checkbox">
                                                     <label class="lk-checkbox">
                                                         <input type="checkbox" name="question" class="lk-checkbox__input">
@@ -474,7 +516,7 @@
                                                     </label>
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--number">
-                                                    3
+                                                    1
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--thumb">
                                                     <div class="lk-item__thumb">
@@ -484,7 +526,7 @@
                                                 <div class="lk-item__col lk-item__col--content">
                                                     <p class="lk-item__text">
                                                         <a href="" target="_blank">
-                                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                            140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                         </a>
                                                     </p>
                                                     <p class="lk-item__text">
@@ -497,13 +539,13 @@
                                                 <div class="lk-item__col lk-item__col--count">
                                                     <p class="lk-item__count">
                                                         <span>
-                                                            2 шт.
+                                                            22 шт.
                                                         </span>
                                                         <span>
                                                             х
                                                         </span>
                                                         <span>
-                                                            <b>12 660</b> руб.
+                                                            <b>211 660</b> руб.
                                                         </span>
                                                     </p>
                                                 </div>
