--- a/src/views/36-page.html
+++ b/src/views/36-page.html
@@ -28,11 +28,11 @@
                                 <div class="lk-table">
                                     <div class="lk-table-toolbar lk-table-toolbar--head">
                                         <div class="lk-table-toolbar__col lk-table-toolbar__col--grow">
-                                           <p class="lk-table-toolbar__text">
-                                               13.05.2020 10:02:25, <strong>4</strong> товара на сумму <strong>4050</strong> руб.
-                                           </p>
-                                        </div>
-                                        <div class="lk-table-toolbar__col lk-table-toolbar__col--repair">
+                                         <p class="lk-table-toolbar__text">
+                                             13.05.2020 10:02:25, <strong>4</strong> товара на сумму <strong>4050</strong> руб.
+                                         </p>
+                                     </div>
+                                     <div class="lk-table-toolbar__col lk-table-toolbar__col--repair">
 
                                             <!-- <p class="lk-table-toolbar__status lk-table-toolbar__status--red">
                                                 Отменен
@@ -48,6 +48,23 @@
                                         </div>
                                     </div>
                                     <article class="lk-item">
+                                        <div class="lk-item__col lk-item__col--remove">
+                                            <button class="remove-all">
+                                                <svg class="icon-svg remove-all__icon">
+                                                    <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                </svg>
+                                            </button>
+                                        </div>
+                                        <div class="lk-item__col lk-item__col--checkbox">
+                                            <label class="lk-checkbox">
+                                                <input type="checkbox" name="question" class="lk-checkbox__input">
+                                                <div class="lk-checkbox__icon">
+                                                    <svg class="icon-svg lk-field__icon-unvisible">
+                                                        <use xlink:href="img/sprites/sprite.svg#icon-check"></use>
+                                                    </svg>
+                                                </div>
+                                            </label>
+                                        </div>
                                         <div class="lk-item__col lk-item__col--number">
                                             1
                                         </div>
@@ -97,8 +114,25 @@
                                         </div>
                                     </article>
                                     <article class="lk-item">
+                                        <div class="lk-item__col lk-item__col--remove">
+                                            <button class="remove-all">
+                                                <svg class="icon-svg remove-all__icon">
+                                                    <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                </svg>
+                                            </button>
+                                        </div>
+                                        <div class="lk-item__col lk-item__col--checkbox">
+                                            <label class="lk-checkbox">
+                                                <input type="checkbox" name="question" class="lk-checkbox__input">
+                                                <div class="lk-checkbox__icon">
+                                                    <svg class="icon-svg lk-field__icon-unvisible">
+                                                        <use xlink:href="img/sprites/sprite.svg#icon-check"></use>
+                                                    </svg>
+                                                </div>
+                                            </label>
+                                        </div>
                                         <div class="lk-item__col lk-item__col--number">
-                                            2
+                                            1
                                         </div>
                                         <div class="lk-item__col lk-item__col--thumb">
                                             <div class="lk-item__thumb">
@@ -108,7 +142,7 @@
                                         <div class="lk-item__col lk-item__col--content">
                                             <p class="lk-item__text">
                                                 <a href="" target="_blank">
-                                                    140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                    140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                 </a>
                                             </p>
                                             <p class="lk-item__text">
@@ -121,13 +155,13 @@
                                         <div class="lk-item__col lk-item__col--count">
                                             <p class="lk-item__count">
                                                 <span>
-                                                    2 шт.
+                                                    22 шт.
                                                 </span>
                                                 <span>
                                                     х
                                                 </span>
                                                 <span>
-                                                    <b>12 660</b> руб.
+                                                    <b>211 660</b> руб.
                                                 </span>
                                             </p>
                                         </div>
@@ -146,8 +180,25 @@
                                         </div>
                                     </article>
                                     <article class="lk-item">
+                                        <div class="lk-item__col lk-item__col--remove">
+                                            <button class="remove-all">
+                                                <svg class="icon-svg remove-all__icon">
+                                                    <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                </svg>
+                                            </button>
+                                        </div>
+                                        <div class="lk-item__col lk-item__col--checkbox">
+                                            <label class="lk-checkbox">
+                                                <input type="checkbox" name="question" class="lk-checkbox__input">
+                                                <div class="lk-checkbox__icon">
+                                                    <svg class="icon-svg lk-field__icon-unvisible">
+                                                        <use xlink:href="img/sprites/sprite.svg#icon-check"></use>
+                                                    </svg>
+                                                </div>
+                                            </label>
+                                        </div>
                                         <div class="lk-item__col lk-item__col--number">
-                                            3
+                                            1
                                         </div>
                                         <div class="lk-item__col lk-item__col--thumb">
                                             <div class="lk-item__thumb">
@@ -157,7 +208,7 @@
                                         <div class="lk-item__col lk-item__col--content">
                                             <p class="lk-item__text">
                                                 <a href="" target="_blank">
-                                                    140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                    140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                 </a>
                                             </p>
                                             <p class="lk-item__text">
@@ -170,13 +221,13 @@
                                         <div class="lk-item__col lk-item__col--count">
                                             <p class="lk-item__count">
                                                 <span>
-                                                    2 шт.
+                                                    22 шт.
                                                 </span>
                                                 <span>
                                                     х
                                                 </span>
                                                 <span>
-                                                    <b>12 660</b> руб.
+                                                    <b>211 660</b> руб.
                                                 </span>
                                             </p>
                                         </div>
