--- a/src/views/42-page.html
+++ b/src/views/42-page.html
@@ -67,7 +67,7 @@
                                         <p class="title-small lk-form__title">
                                             <span>Способ доставки</span>
                                         </p>
-                                        <div class="lk-form__grid lk-form__grid--start">
+                                        <div class="lk-form__grid">
                                             <label class="ill-check" tabindex="0">
                                                 <input type="radio" name="shipping" class="ill-check__input">
                                                 <div class="ill-check__block">
@@ -104,6 +104,8 @@
                                                     </p>
                                                 </div>
                                             </label>
+                                            <div class="ill-check ill-check--clear"></div>
+                                            <div class="ill-check ill-check--clear"></div>
                                         </div>
                                     </div>
                                     <div class="lk-form__section">
@@ -157,7 +159,7 @@
                                         <p class="title-small lk-form__title">
                                             <span>Способ оплаты</span>
                                         </p>
-                                        <div class="lk-form__grid lk-form__grid--start">
+                                        <div class="lk-form__grid">
                                             <label class="ill-check" tabindex="0">
                                                 <input type="radio" name="payment" class="ill-check__input">
                                                 <div class="ill-check__block">
@@ -195,6 +197,8 @@
                                                     </p>
                                                 </div>
                                             </label>
+                                            <div class="ill-check ill-check--clear"></div>
+                                            <div class="ill-check ill-check--clear"></div>
                                         </div>
                                     </div>
                                     <a href="" class="btn btn--gray lk-form__btn">
