--- a/src/views/6-page.html
+++ b/src/views/6-page.html
@@ -13,7 +13,7 @@
                 <div class="container">
                     <div class="product__grid">
                         <div class="grid">
-                            <div class="grid__column grid__column--4">
+                            <div class="grid__column grid__column--editable grid__column--4">
                                 <div class="grid__block mobile-order mobile-order--9">
                                     @@include("../blocks/modules/slider/slider.html")
                                 </div>
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
 
-                            <div class="grid__column grid__column--5">
+                            <div class="grid__column grid__column--editable grid__column--5">
                                 <div class="grid__block mobile-order mobile-order--10">
                                     <h1 class="product-title">
                                         Варочная поверхность FRANKE TREND LINE FHTL 755 4G TC BT C черная матовая
@@ -244,7 +244,7 @@
                                 </div>
                             </div>
 
-                            <div class="grid__column grid__column--3">
+                            <div class="grid__column grid__column--editable grid__column--3">
                                 <div class="grid__block grid__block--sticky grid__block--product-card mobile-order mobile-order--8">
                                     <div class="product-card">
                                         <h3 class="product-card__title">
@@ -324,7 +324,7 @@
                                 </div>
                             </div>
 
-                            <div class="grid__column grid__column--8">
+                            <div class="grid__column grid__column--editable grid__column--8">
                                 <div class="grid__block mobile-order mobile-order--4">
                                     <div class="product-video">
                                         <iframe width="560" height="315" src="https://www.youtube.com/embed/X4bgXH3sJ2Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -345,7 +345,7 @@
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
                                         <div class="card__tags"></div>
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -426,7 +426,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
                                                 Новинка
@@ -512,7 +512,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
                                                 Акция
@@ -598,7 +598,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
                                                 Распродажа
@@ -684,7 +684,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -765,7 +765,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -846,7 +846,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -927,7 +927,7 @@
 
                                 <article href="" class="card card--small">
                                     <a href class="card__thumb resized">
-                                        <img src="http://placehold.it/900x600" alt="Название товара">
+                                        <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
                                         140.120.61 Фреза концевая DIA D12/NL27/L70/S12
