--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -127,12 +127,20 @@
 	}
 	&__content {
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
 	}
+	&__logo {
+		display: block;
+		max-width: 200px;
+		img {
+			width: 100%;
+		}
+	}
 	&__search {
 		flex-grow: 1;
-		margin-right: 10px;
+		margin-top: 20px;
 	}
 	&__input {
 		box-sizing: border-box;
