--- a/src/views/11-page.html
+++ b/src/views/11-page.html
@@ -55,7 +55,7 @@
                         <div class="catalog__main">
                             <section class="service">
                                 <div class="service__grid">
-                                    <div class="service__column service__column--4">
+                                    <div class="service__column service__column--editable service__column--4">
                                         <div class="grid__block mobile-order mobile-order--9">
                                             @@include("../blocks/modules/slider/slider.html")
                                         </div>
@@ -77,7 +77,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--6">
+                                    <div class="service__column service__column--editable service__column--6">
                                         <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
@@ -137,7 +137,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--8">
+                                    <div class="service__column service__column--editable service__column--8">
                                         <div class="grid__block mobile-order mobile-order--7">
                                             @@include("../blocks/modules/product/product-video.html")
                                         </div>
