--- a/src/views/19-page.html
+++ b/src/views/19-page.html
@@ -16,7 +16,7 @@
                             О нас
                         </h2>
                         <div class="single__columns">
-                            <div class="single__column single__column--8">
+                            <div class="single__column single__column--editable single__column--8">
                                 <div class="text single__text">
                                     <p>
                                         История «Балтламинат» насчитывает более 19 лет и все это время компания неуклонно идет вперед, постоянно расширяя свои возможности для клиентов и предлагая им самые качественные и современные услуги и товары по направлениям:
@@ -85,7 +85,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="single__column single__column--4">
+                            <div class="single__column single__column--editable single__column--4">
                                 <a href="" class="link-file">
                                     <svg class="icon-svg link-file__icon">
                                         <use xlink:href="img/sprites/sprite.svg#icon-pdf"></use>
@@ -103,10 +103,10 @@
                                     </p>
                                 </a>
                             </div>
-                            <div class="single__column single__column--12">
+                            <div class="single__column single__column--editable single__column--12">
                                 @@include("../blocks/modules/gallery/gallery.html")
                             </div>
-                            <div class="single__column single__column--8">
+                            <div class="single__column single__column--editable single__column--8">
                                 @@include("../blocks/modules/product/product-video.html")
                             </div>
                         </div>
