--- a/src/views/30-page.html
+++ b/src/views/30-page.html
@@ -76,13 +76,13 @@
                                             автоматически подгрузится
                                         </p>
                                     </div>
-                                    <div class="lk-field">
+                                    <div class="lk-field lk-field--password">
                                         <p class="lk-field__title">
                                             Пароль
                                         </p>
                                         <div class="lk-field__wrapper lk-field__wrapper--50">
                                             <input type="password" class="lk-input lk-field__input" placeholder="">
-                                            <button class="lk-field__toggle lk-field__toggle--visible">
+                                            <button class="lk-field__toggle lk-field__toggle--unvisible">
                                                 <svg class="icon-svg lk-field__icon-visible">
                                                     <use xlink:href="img/sprites/sprite.svg#icon-visible"></use>
                                                 </svg>
@@ -96,12 +96,20 @@
                                             буквы и цифры
                                         </p>
                                     </div>
-                                    <div class="lk-field">
+                                    <div class="lk-field lk-field--password">
                                         <p class="lk-field__title">
                                             Повторите пароль
                                         </p>
                                         <div class="lk-field__wrapper lk-field__wrapper--50">
                                             <input type="password" class="lk-input lk-field__input" placeholder="">
+                                            <button class="lk-field__toggle lk-field__toggle--unvisible">
+                                                <svg class="icon-svg lk-field__icon-visible">
+                                                    <use xlink:href="img/sprites/sprite.svg#icon-visible"></use>
+                                                </svg>
+                                                <svg class="icon-svg lk-field__icon-unvisible">
+                                                    <use xlink:href="img/sprites/sprite.svg#icon-unvisible"></use>
+                                                </svg>
+                                            </button>
                                         </div>
                                         <p class="lk-field__discript lk-field__discript--50">
                                             Введите придуманный пароль ещё раз
