--- a/src/views/37-page.html
+++ b/src/views/37-page.html
@@ -76,6 +76,23 @@
                                                 </div>
                                             </div>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
+                                                <div class="lk-item__col lk-item__col--checkbox">
+                                                    <label class="lk-checkbox">
+                                                        <input type="checkbox" name="question" class="lk-checkbox__input">
+                                                        <div class="lk-checkbox__icon">
+                                                            <svg class="icon-svg lk-field__icon-unvisible">
+                                                                <use xlink:href="img/sprites/sprite.svg#icon-check"></use>
+                                                            </svg>
+                                                        </div>
+                                                    </label>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
@@ -125,8 +142,25 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
+                                                <div class="lk-item__col lk-item__col--checkbox">
+                                                    <label class="lk-checkbox">
+                                                        <input type="checkbox" name="question" class="lk-checkbox__input">
+                                                        <div class="lk-checkbox__icon">
+                                                            <svg class="icon-svg lk-field__icon-unvisible">
+                                                                <use xlink:href="img/sprites/sprite.svg#icon-check"></use>
+                                                            </svg>
+                                                        </div>
+                                                    </label>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--number">
-                                                    2
+                                                    1
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--thumb">
                                                     <div class="lk-item__thumb">
@@ -136,7 +170,7 @@
                                                 <div class="lk-item__col lk-item__col--content">
                                                     <p class="lk-item__text">
                                                         <a href="" target="_blank">
-                                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                            140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                         </a>
                                                     </p>
                                                     <p class="lk-item__text">
@@ -149,13 +183,13 @@
                                                 <div class="lk-item__col lk-item__col--count">
                                                     <p class="lk-item__count">
                                                         <span>
-                                                            2 шт.
+                                                            22 шт.
                                                         </span>
                                                         <span>
                                                             х
                                                         </span>
                                                         <span>
-                                                            <b>12 660</b> руб.
+                                                            <b>211 660</b> руб.
                                                         </span>
                                                     </p>
                                                 </div>
@@ -174,8 +208,25 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
+                                                <div class="lk-item__col lk-item__col--remove">
+                                                    <button class="remove-all">
+                                                        <svg class="icon-svg remove-all__icon">
+                                                            <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
+                                                        </svg>
+                                                    </button>
+                                                </div>
+                                                <div class="lk-item__col lk-item__col--checkbox">
+                                                    <label class="lk-checkbox">
+                                                        <input type="checkbox" name="question" class="lk-checkbox__input">
+                                                        <div class="lk-checkbox__icon">
+                                                            <svg class="icon-svg lk-field__icon-unvisible">
+                                                                <use xlink:href="img/sprites/sprite.svg#icon-check"></use>
+                                                            </svg>
+                                                        </div>
+                                                    </label>
+                                                </div>
                                                 <div class="lk-item__col lk-item__col--number">
-                                                    3
+                                                    1
                                                 </div>
                                                 <div class="lk-item__col lk-item__col--thumb">
                                                     <div class="lk-item__thumb">
@@ -185,7 +236,7 @@
                                                 <div class="lk-item__col lk-item__col--content">
                                                     <p class="lk-item__text">
                                                         <a href="" target="_blank">
-                                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12
+                                                            140.120.61 Очень длинное название несомненно очень важной и не менее несомненно очень большой и дорогой штуки, чье предназначение непонятно простому смертному
                                                         </a>
                                                     </p>
                                                     <p class="lk-item__text">
@@ -198,13 +249,13 @@
                                                 <div class="lk-item__col lk-item__col--count">
                                                     <p class="lk-item__count">
                                                         <span>
-                                                            2 шт.
+                                                            22 шт.
                                                         </span>
                                                         <span>
                                                             х
                                                         </span>
                                                         <span>
-                                                            <b>12 660</b> руб.
+                                                            <b>211 660</b> руб.
                                                         </span>
                                                     </p>
                                                 </div>
