--- a/src/views/8-page.html
+++ b/src/views/8-page.html
@@ -55,7 +55,7 @@
                         <div class="catalog__main">
                             <section class="service">
                                 <div class="service__grid">
-                                    <div class="service__column service__column--4">
+                                    <div class="service__column service__column--editable service__column--4">
                                         <div class="grid__block mobile-order mobile-order--8">
                                             @@include("../blocks/modules/slider/slider.html")
                                         </div>
@@ -85,7 +85,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--6">
+                                    <div class="service__column service__column--editable service__column--6">
                                         <div class="grid__block mobile-order mobile-order--10">
                                             <div class="service-text">
                                                 <h1 class="service-text__title">
@@ -166,7 +166,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--8">
+                                    <div class="service__column service__column--editable service__column--8">
                                         <div class="grid__block mobile-order mobile-order--9">
                                             <div class="service-table">
                                                 <p class="title-small title-small--product service-table__title">
